--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -33,7 +33,7 @@
 							<h1><a href="#" id="logo">Calfood</a></h1>
 							<nav id="nav">
 								<a href="index.html">Home</a>
-								<a href="ar-exercise.html" class="current-page-item">AR Excercise</a>
+								<a href="twocolumn1.html" class="current-page-item">AR Excercise</a>
 								<a href="twocolumn2.html">References</a>
 								<a href="onecolumn.html">Other</a>
 								<a href="threecolumn.html">About us</a>
