--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -100,10 +100,12 @@
 							<p><strong>ข้อเท็จจริงที่สำคัญ</strong></p>
 							
 							<ul class="navbar">
-  								<li><a href="index.html">Home page</a>
- 								<li><a href="musings.html">Musings</a>
-  								<li><a href="town.html">My town</a>
-  								<li><a href="links.html">Links</a>
+  								<li>•โรคอ้วนทั่วโลกเพิ่มขึ้นเกือบเท่าตัวตั้งแต่ปี1980เป็นต้นมา</li>
+ 								<li>•ในปี 2008 พบว่าผู้ใหญ่มากกว่า 1.4 ล้านคน  มีน้ำหนักเกินซึ่งมากกว่า 200 ล้านคนเป็นผู้ชาย และเกือบ 300 ล้านคนที่เป็นผู้หญิง</li>
+ 								<li>•ค้นพบว่าคนที่มีอายุ 20 ปี ขึ้นไป 35% น้ำหนักเกิน และ 11% เป็นโรคอ้วน</li>
+ 								<li>•ประชากรทั่วโลก 65% มีน้ำหนักเกิน และเสียชีวิตด้วยโรคอ้วน</li>
+ 								<li>•ในปี 2012 พบว่าเด็กกว่า 40 ล้านคนที่มีอายุต่ำกว่า 5 ปี ก็เป็นโรคอ้วน</li>
+ 								<li>•โรคอ้วนก็เป็นสิ่งที่ป้องกันได้</li>
 							</ul>
 							<p>Mauris risus nulla, pulvinar vitae sagittis a, pharetra nec tellus. Suspendisse varius enim ac felis mattis aliquam. Aenean et justo quis ipsum gravida lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia bibendum cursus. Nullam nec pellentesque lacus. In porta erat in tortor rhoncus quis accumsan magna pretium. Nulla posuere magna eget mauris lacinia in mollis sem fermentum. Donec mollis adipiscing mauris, ut posuere enim rhoncus ut. Nunc commodo vestibulum orci vel placerat. Cras sed risus libero. Donec ac lacus vitae lectus mattis commodo id vitae libero. Etiam lorem odio, volutpat nec pulvinar sit amet, tincidunt ut lacus. Pellentesque consequat arcu vel nisi lobortis in pellentesque orci sollicitudin. Cras gravida lacus turpis, consectetur porttitor lectus. Cras malesuada tortor id neque porta ut semper quam iaculis.</p>
 							<p>Nulla ut tortor quam, a luctus nunc. Nulla condimentum diam porttitor arcu placerat tincidunt. Nunc non augue ipsum. Nulla facilisi. Phasellus feugiat augue in ipsum egestas semper. Suspendisse blandit, nisl ullamcorper blandit sollicitudin, sem leo auctor lectus, et volutpat mauris elit et odio. Ut elementum risus in metus mollis tristique vulputate nulla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae orci dui, ut facilisis dui.</p>
