--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -114,7 +114,8 @@
 							<p><strong>นิยามของ WHO (World Health Organization: องค์กรอนามัยโลก)</strong></p>
 							<p>• ค่าดัชนีมวลกายมากกว่าหรือเท่ากับ 25คือน้ำหนักเกิน</p>
 							<p>• ค่าดัชนีมวลกายมากกว่าหรือเท่ากับ 30 เป็นโรคอ้วน</p>
-							<p>Nulla ut tortor quam, a luctus nunc. Nulla condimentum diam porttitor arcu placerat tincidunt. Nunc non augue ipsum. Nulla facilisi. Phasellus feugiat augue in ipsum egestas semper. Suspendisse blandit, nisl ullamcorper blandit sollicitudin, sem leo auctor lectus, et volutpat mauris elit et odio. Ut elementum risus in metus mollis tristique vulputate nulla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae orci dui, ut facilisis dui.</p>
+							<p>ค่าดัชนีมวลกายเป็นตัวชี้วัดที่มีประโยชน์ให้กับประชาชนในระดับต่างๆ ที่มีน้ำหนักเกินและเป็นโรคอ้วนในทุกเพศทุกวัย แต่อย่างไรก็ตามก็ควรมีการพิจารณาแนวทางคร่าวๆก่อน เพราะเนื่องจากความสมบูรณ์ของร่างกายแต่ละคนก็แตกต่างกันไป</p>
+							
 						</section>
 					
 					</div>
