--- a/ar-exercise.html
+++ b/ar-exercise.html
@@ -30,7 +30,7 @@
 					<div class="12u">
 						
 						<header id="header">
-							<h1><a href="#" id="logo">Mobile Augmented Reality Exergame</a></h1>
+							<h1><a href="#" id="logo">AR Excercise</a></h1>
 							<nav id="nav">
 								<a href="index.html">Home</a>
 								<a href="twocolumn1.html" class="current-page-item">AR Excercise</a>
