--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -88,7 +88,7 @@
 					</div>
 					<div class="4u">
 
-						<section>
+						<!-- <section>
 							<h2>Who are you guys?</h2>
 							<ul class="small-image-list">
 								<li>
@@ -128,7 +128,7 @@
 									</div>
 								</div>
 							</div>
-						</section>
+						</section> -->
 
 					</div>
 				</div>
