--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<h2>AR Excercise</h2>
 							<p>Short Paper: Calory Battle AR: an Extensible Mobile Augmented Reality Exergame Platform</p>
 							<footer class="controls">
-								<a href="http://html5up.net" class="button">More AR Excercise...</a>
+								<a href="twocolumn1.html" class="button">More AR Excercise...</a>
 							</footer>
 						</section>
 					
