--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<nav id="nav">
 								<a href="index.html" class="current-page-item">Home</a>
 								<a href="twocolumn1.html">AR Exercise</a>
-								<a href="twocolumn2.html">References</a>
+								<!-- <a href="twocolumn2.html">References</a> -->
 								<a href="onecolumn.html">Other</a>
 								<a href="threecolumn.html">About us</a>
 							</nav>
