--- a/onecolumn.html
+++ b/onecolumn.html
@@ -84,7 +84,7 @@
 							<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ภายในกล่องจะพบกับแผ่นเกม, ถ่าน AA 4 ก้อน, คู่มือ และแท่นบาลานซ์บอร์ด โดยในรังถ่านของบอร์ดมีปุ่มแดงไว้ sync เหมือน Wii Mote โดยมีปุ่มเปิดอยู่ด้านหน้า เมื่อเข้าเกมจะต้องมีการอัปเดตก่อน ซึ่งจะได้ FW 3.1 แถมมากับแผ่น และตัวบอร์ดที่รับน้ำหนักตัวผู้เล่นได้มากถึง 136 กก. ตัวเกมจะให้เราใส่ส่วนสูง และยืนเพื่อวัดความสมดุลของร่างกาย และวัด BMI (Body Mass Index) หรือ ดัชนีมวลกาย และมีแบบทดสอบความสมดุลก่อนเริ่มเกม</p>
 							<br>
 
-							<!-- <center><iframe width="480" height="360" src="//www.youtube.com/embed/5oNVIcMnZh4" frameborder="0" allowfullscreen></iframe></center> -->
+							<center><iframe width="480" height="360" src="//www.youtube.com/embed/5oNVIcMnZh4" frameborder="0" allowfullscreen></iframe></center>
 							<br>
 							<br>
 							<br>
@@ -103,14 +103,14 @@
 							<br>
 							<br>
 							<br>
-							<!-- <center><iframe width="480" height="360" src="//www.youtube.com/embed/x3MKR3xVRM0" frameborder="0" allowfullscreen></iframe></center> -->
+							<center><iframe width="480" height="360" src="//www.youtube.com/embed/x3MKR3xVRM0" frameborder="0" allowfullscreen></iframe></center>
 							<br>
 							<br>
 							<h2>ZOMBIES,&nbsp; RUN!</h2>
 							<br>
 							<br>
 							<br>
-							<!--<iframe width="480" height="360" src="//www.youtube.com/embed/GyFqZtKvya0" frameborder="0" allowfullscreen></iframe>-->
+							<iframe width="480" height="360" src="//www.youtube.com/embed/GyFqZtKvya0" frameborder="0" allowfullscreen></iframe>
 							<br>
 							<br>
 
