--- a/onecolumn.html
+++ b/onecolumn.html
@@ -110,7 +110,7 @@
 							<br>
 							<br>
 							<br>
-							<iframe width="480" height="360" src="//www.youtube.com/embed/GyFqZtKvya0" frameborder="0" allowfullscreen></iframe>
+							<center><iframe width="480" height="360" src="//www.youtube.com/embed/GyFqZtKvya0" frameborder="0" allowfullscreen></iframe></center>
 							<br>
 							<br>
 
