--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>AR Exercise</title>
+		<title>AR Exergame</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -30,11 +30,11 @@
 					<div class="12u">
 						
 						<header id="header">
-							<h1><a href="#" id="logo">AR Exercise</a></h1>
+							<h1><a href="#" id="logo">AR Exergame</a></h1>
 							<nav id="nav">
 								<a href="index.html">Home</a>
-								<a href="twocolumn1.html" class="current-page-item">AR Exercise</a>
-								<!-- <a href="twocolumn2.html">References</a> -->
+								<a href="twocolumn1.html" class="current-page-item">AR Exergame</a>
+								<a href="twocolumn2.html">References</a>
 								<a href="onecolumn.html">Other</a>
 								<a href="threecolumn.html">About us</a>
 							</nav>
