--- a/twocolumn2.html
+++ b/twocolumn2.html
@@ -77,7 +77,7 @@
 											<center><li><a href="Obesity and overweight.pdf" target="_blank">โรคอ้วนและน้ำหนักเกิน</a></li>
 											<li><a href="OECD_vEng.pdf" target="_blank">โรคอ้วนและเศรษฐศาสตร์ของการป้องกันฯ</a></li>
 											<li><a href="Exergames for Physical Education Courses_vEng.pdf" target="_blank">Exergames สำหรับวิชากายภาพฯ</a></li>
-											<li><a href="GeoBoids.pdf" target="_blank">Geoboids: A mobile ar application for exergaming</a></li>
+											<li><a href="Geoboids_vEng.pdf" target="_blank">Geoboids: A mobile ar application for exergaming</a></li>
 											<li><a href="https://www.zombiesrungame.com/" target="_blank">Zombies run!</a></li></center>
 
 
